--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "bitcoin-merkle-proof": "0.0.x",
-    "bitcoin-protocol": "^3.0.0",
+    "bitcoin-protocol": "snogcel/bitcoin-protocol",
     "bitcoin-util": "^2.0.0",
     "bitcore-lib-dash": "snogcel/bitcore-lib-dash",
     "bn.js": "^4.11.1",
