--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "webcoin-bitcoin": "^2.0.0"
   },
   "directories": {
-    "test": "test"
+    "src": "src"
   },
   "repository": {
     "type": "git",
